--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta
     name="viewport"
     content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"/>
-    <title>Redux Todos Example</title>
+    <title>Poke API</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     
